@@ -14,6 +14,7 @@ Unreleased Version 2.2.1-pre
  * Feature: Add next and previous key frame actions, allowing skipping between key frames in the current track. Thanks BulletPepper for reporting.
  * Fix: Properly refer to "layer" and "layer group" in layer actions depending on what is selected. Thanks Momo for reporting.
  * Fix: Save censored layers into PSDs properly. Thanks Blozzom for reporting.
+ * Fix: Don't allow copying, cutting and color picking from censored layers.
 
 2024-01-13 Version 2.2.0
  * Server Fix: Add --ssl-key-algorithm parameter to allow non-RSA SSL keys, defaulting to guessing the most common formats RSA and EC. Thanks Bluestrings for reporting.
